--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
+    "react-router": "^7.8.0",
     "react-spinners": "^0.17.0",
     "recharts": "^2.15.4",
     "tailwindcss": "^4.1.10"
